samples/_failures_safe/1761430075_8418d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d66b7b4.c: In function ‘main’:
./samples/SAFE/__tmp_1d66b7b4.c:164:9: error: expected declaration or statement at end of input
  164 |         free_matrix(mat2);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_1d66b7b4.c:164:9: error: expected declaration or statement at end of input
